# api/handler/time_table.go
@@ -9,73 +9,73 @@ import (
 	"github.com/google/uuid"
 )
 
-// @Router		/teacher [POST]
-// @Summary		create a teacher
-// @Description	This api create a teacher and returns its id
-// @Tags		teacher
+// @Router		/time [POST]
+// @Summary		create a time table
+// @Description	This api create a time table and returns its id
+// @Tags		time_table
 // @Accept		json
 // @Produce		json
-// @Param		teacher body models.Teacher true "teacher"
+// @Param		time_table body models.Time true "time table"
 // @Success		200  {object}  models.Response
 // @Failure		400  {object}  models.Response
 // @Failure		404  {object}  models.Response
 // @Failure		500  {object}  models.Response
-func (h Handler) CreateTeacher(c *gin.Context) {
-	teacher := models.Teacher{}
-
-	if err := c.ShouldBindJSON(&teacher); err != nil {
+func (h Handler) CreateTime(c *gin.Context) {
+	time := models.Time{}
+	if err := c.ShouldBindJSON(&time); err != nil {
 		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
 
-	id, err := h.Store.TeacherStorage().Create(c.Request.Context(), teacher)
+	id, err := h.Store.TimeStorage().Create(c.Request.Context(), time)
 	if err != nil {
-		handleResponse(c, "error while creating teacher", http.StatusBadRequest, err.Error())
+		handleResponse(c, "error while creating time table", http.StatusBadRequest, err.Error())
 		return
 	}
 
 	handleResponse(c, "Created successfully", http.StatusOK, id)
 }
 
-// @Router		/teacher/{id} [PUT]
-// @Summary		update a teacher
-// @Description	This api update a teacher and returns its id
-// @Tags		teacher
+// @Router		/time/{id} [PUT]
+// @Summary		update a time table
+// @Description	This api update a time table and returns its id
+// @Tags		time_table
 // @Accept		json
 // @Produce		json
-// @Param		teacher body models.Teacher true "teacher"
+// @Param		time_table body models.Time true "time table"
 // @Success		200  {object}  models.Response
 // @Failure		400  {object}  models.Response
 // @Failure		404  {object}  models.Response
 // @Failure		500  {object}  models.Response
-func (h Handler) UpdateTeacher(c *gin.Context) {
+func (h Handler) UpdateTime(c *gin.Context) {
 
-	teacher := models.Teacher{}
+	time := models.Time{}
 
 	id := c.Param("id")
 	if err := uuid.Validate(id); err != nil {
-		handleResponse(c, "error while validating teacherId", http.StatusBadRequest, err.Error())
+		handleResponse(c, "error while validating studentId", http.StatusBadRequest, err.Error())
 		return
 	}
-	teacher.Id = id
+	time.Id = id
 
-	if err := c.ShouldBindJSON(&teacher); err != nil {
+	if err := c.ShouldBindJSON(&time); err != nil {
 		handleResponse(c, "error while reading request body", http.StatusBadRequest, err.Error())
 		return
 	}
-	id, err := h.Store.TeacherStorage().Update(c.Request.Context(), teacher)
+	id, err := h.Store.TimeStorage().Update(c.Request.Context(), time)
 	if err != nil {
-		handleResponse(c, "error while updating teacher", http.StatusInternalServerError, err.Error())
+		handleResponse(c, "error while updating time table", http.StatusInternalServerError, err.Error())
 		return
 	}
 
 	handleResponse(c, "Updated successfully", http.StatusOK, id)
 }
 
-// @Router		/teacher/{id} [DELETE]
-// @Summary		delete a teacher
-// @Description	This api delete a teacher
-// @Tags		teacher
+
+// @Router		/time/{id} [DELETE]
+// @Summary		delete a time table
+// @Description	This api delete a time table
+// @Tags		time_table
 // @Accept		json
 // @Produce		json
 // @Param		id path string true "id"
@@ -83,24 +83,24 @@ func (h Handler) UpdateTeacher(c *gin.Context) {
 // @Failure		400  {object}  models.Response
 // @Failure		404  {object}  models.Response
 // @Failure		500  {object}  models.Response
-func (h Handler) DeleteTeacher(c *gin.Context) {
+func (h Handler) DeleteTime(c *gin.Context) {
 	id := c.Param("id")
 	if err := uuid.Validate(id); err != nil {
-		handleResponse(c, "error while validating teacherId", http.StatusBadRequest, err.Error())
+		handleResponse(c, "error while validating timeId", http.StatusBadRequest, err.Error())
 		return
 	}
-	if err := h.Store.TeacherStorage().Delete(c.Request.Context(), id); err != nil {
-		handleResponse(c, "error while deleting teacher", http.StatusInternalServerError, err.Error())
+	if err := h.Store.TimeStorage().Delete(c.Request.Context(), id); err != nil {
+		handleResponse(c, "error while deleting student", http.StatusInternalServerError, err.Error())
 		return
 	}
 
 	handleResponse(c, "Deleted successfully", http.StatusOK, id)
 }
 
-// @Router		/teacher/{id} [GET]
-// @Summary		Get a teacher
-// @Description	This api get a teacher
-// @Tags		teacher
+// @Router		/time/{id} [GET]
+// @Summary		Get a time table
+// @Description	This api get a time_table
+// @Tags		time_table
 // @Accept		json
 // @Produce		json
 // @Param		id path string true "id"
@@ -108,27 +108,27 @@ func (h Handler) DeleteTeacher(c *gin.Context) {
 // @Failure		400  {object}  models.Response
 // @Failure		404  {object}  models.Response
 // @Failure		500  {object}  models.Response
-func (h Handler) GetTeacher(c *gin.Context) {
+func (h Handler) GetTime(c *gin.Context) {
 
 	id := c.Param("id")
 	if err := uuid.Validate(id); err != nil {
-		handleResponse(c, "error while validating teacherId", http.StatusBadRequest, err.Error())
+		handleResponse(c, "error while validating timeId", http.StatusBadRequest, err.Error())
 		return
 	}
 
-	std, err := h.Store.TeacherStorage().GetTeacher(c.Request.Context(), id)
+	std, err := h.Store.TimeStorage().GetTime(c.Request.Context(), id)
 	if err != nil {
-		handleResponse(c, "error while getting teacher", http.StatusInternalServerError, err.Error())
+		handleResponse(c, "error while getting time table", http.StatusInternalServerError, err.Error())
 		return
 	}
 
 	handleResponse(c, "Got successfully", http.StatusOK, std)
 }
 
-// @Router		/teachers [GET]
-// @Summary		Get  all teachers
-// @Description	This api get all teachers
-// @Tags		teacher
+// @Router		/time-tables [GET]
+// @Summary		Get  time tables
+// @Description	This api get all time tables
+// @Tags		time_table
 // @Accept		json
 // @Produce		json
 // @Param		id path string true "id"
@@ -136,7 +136,7 @@ func (h Handler) GetTeacher(c *gin.Context) {
 // @Failure		400  {object}  models.Response
 // @Failure		404  {object}  models.Response
 // @Failure		500  {object}  models.Response
-func (h Handler) GetAllTeachers(c *gin.Context) {
+func (h Handler) GetAllTimeTables(c *gin.Context) {
 	search := c.Query("search")
 
 	page, err := ParsePageQueryParam(c)
@@ -150,13 +150,13 @@ func (h Handler) GetAllTeachers(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.Store.TeacherStorage().GetAll(c.Request.Context(), models.GetAllTeachersRequest{
-		Limit: limit,
-		Page: page,
+	resp, err := h.Store.TimeStorage().GetAll(c.Request.Context(), models.GetAllTimeRequest{
 		Search: search,
+		Page:   page,
+		Limit:  limit,
 	})
 	if err != nil {
-		handleResponse(c, "error while getting all teachers", http.StatusInternalServerError, err.Error())
+		handleResponse(c, "error while getting all time tables", http.StatusInternalServerError, err.Error())
 		return
 	}
 	handleResponse(c, "request successful", http.StatusOK, resp)
