# api/models/teacher.go
@@ -1,20 +1,16 @@
 package models
 
-import "time"
-
 type Teacher struct {
-	Id           string    `json:"id"`
-	FirstName    string    `json:"first_name"`
-	LastName     string    `json:"last_name"`
-	SubjectId    string    `json:"subject_id"`
-	StartWorking time.Time `json:"start_working"`
-	Phone        string    `json:"phone"`
-	Email        string    `json:"mail"`
-	CreatedAt    time.Time `json:"created_at"`
-	UpdatedAt    time.Time `json:"updated_at"`
+	Id           string `json:"id"`
+	FirstName    string `json:"first_name"`
+	LastName     string `json:"last_name"`
+	SubjectId    string `json:"subject_id"`
+	StartWorking string `json:"start_working"`
+	Phone        string `json:"phone"`
+	Email        string `json:"mail"`
+	CreatedAt    string `json:"created_at"`
+	UpdatedAt    string `json:"updated_at"`
 }
-
-
 
 type GetAllTeachersRequest struct {
 	Search string `json:"search"`
@@ -22,8 +18,7 @@ type GetAllTeachersRequest struct {
 	Limit  uint64 `json:"limit"`
 }
 
-
 type GetAllTeachersResponse struct {
 	Teachers []Teacher `json:"teachers"`
-	Count    int64        `json:"count"`
+	Count    int64     `json:"count"`
 }
